--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     </figure>
 
                     <figure v-bind:style="{ background: activeColor }" class="photo">
-                        <img src="other/IMG_0747.JPG" alt="Timothy"/>
+                        <img src="other/limitless.JPG" alt="Timothy"/>
                         <figcaption>Me at limitless "Communicating using English boot-camp done by me and my friends"
                         </figcaption>
                     </figure>
@@ -259,7 +259,7 @@
                     </figure>
                     <figure v-bind:style="{ background: activeColor }" class="photo">
                         <img src="other/image_2019-05-22_20-54-14.png"/>
-                        <figcaption>Me at Hultprize</figcaption>
+                        <figcaption>Me at Hult prize</figcaption>
                     </figure>
                     <figure v-bind:style="{ background: activeColor }" class="photo">
                         <img src="other/cinema.jpg"/>
