--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             font-size: 40px;
         }
 
-        .gif img{
+        .gif img {
             width: 100%;
             height: auto;
             position: relative;
@@ -158,7 +158,8 @@
 
             <div class="row">
                 <div class="col m-3">
-                    <h4 class="text-center">Now you can go and click the tabs in the top to know more about me, enjoy ;)</h4>
+                    <h4 class="text-center">Now you can go and click the tabs in the top to know more about me, enjoy
+                        ;)</h4>
                 </div>
             </div>
 
@@ -193,6 +194,11 @@
                         <figcaption>I sleep while reading too</figcaption>
                     </figure>
 
+                    <figure v-bind:style="{ background: activeColor }" class="photo">
+                        <img src="home/cute.jpg"/>
+                        <figcaption>And for the sake of a fifth picture here are few cute stuff from my room :)
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
 
