--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                     <figure v-bind:style="{ background: activeColor }" class="photo">
                         <img src="home/photo_2019-05-22_22-52-43.jpg"/>
-                        <figcaption>I sleep while reading too</figcaption>
+                        <figcaption>Why i never finish books</figcaption>
                     </figure>
 
                     <figure v-bind:style="{ background: activeColor }" class="photo">
