--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h1 class="text-center m-4">What i value the most</h1>
             <div class="row m-2">
                 <div class="col"><h4 class="text-center value">Intellect</h4>
-                    <p>I think a lot and to understand something i need to know the reasons.</p>
+                    <p>I think a lot because to understand something i need to know the reasons.</p>
                 </div>
                 <div class="col"><h4 class="text-center value">Renovation</h4>
                     <p>It is important for me to be innovative and do new things from time to time.</p>
